# InitViz

./: .gitignore  MANIFEST.in  Makefile  README.md  bootchartd.conf  bootchartd.in  initviz.1  initviz.py  pyproject.toml
.github/workflows/: build.yml  release.yml
.notes/: kernel-boot-time.md
collector/: collector.c  common.h  dump.c  output.c  tasks-netlink.c  tasks.c
doc/: ChangeLog.md  README  README.PyPI.md  README.pybootchart  TODO
examples/busybox/: bootlog.tgz
initviz/: __init__.py  batch.py  draw.py  gui.py  main.py.in  parsing.py  process_tree.py  samples.py
initviz/tests/: parser_test.py  process_tree_test.py
man/: bootchartd.1  initviz.1
pybootchartgui/: draw.py  gui.py  main.py.in  parsing.py
